2009-08-24  Cyril Robert <crobert@inverse.ca>

	* UI/MailerUI/UIxMailMainFrame.m: Refactoring + added vLists support.
	* UI/Contacts/UIxListEditor.m: Implementation.
	* UI/Contacts/UIxContactsListView.m (contactSearchAction): added to support
	search in a single folder.

2009-08-21  Cyril Robert <crobert@inverse.ca>

	* UI/Contacts/UIxListView.m: Implementation, allows VLISTs to be displayed.
	* UI/Contacts/UIxListView.m (checkListReferences): Added list integrity
	verification (make sure all references are valid).

2009-08-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* Tests/webdavlib.py (WebDAVQuery.xpath_evaluate): new method to
	facilitate xpath evaluation from tests.

2009-08-20  Cyril Robert <crobert@inverse.ca>

	* UI/Common/UIxParentFolderActions.m (createFolderAction): Mantis 2040:
	return a 409 code when a folder with the same name exists.
	* SoObjects/SOGo/SOGoParentFolder.m (hasLocalSubFolderNamed): Added for
	Mantis 2040.
	* UI/Scheduler/UIxDatePicker.m: Fix to use user-defined format, if any.
	Mantis 1911.
	* UI/Scheduler/UIxDatePicker.m: Removed changes from 1911: too many issues.
	* UI/Scheduler/UIxCalFilterPanel.m (selectedFilter): Added support for 
	CalendarDefaultFilter user default. Mantis 112
	* UI/Scheduler/UIxCalListingActions.m (checkFilterValue): Added to support
	CalendarDefaultFilter user default. Mantis 112
	* SoObjects/SOGo/SOGoUser.m: Changed "signature" setting's place: MailSignature
	Mantis 113.
	* UI/PreferencesUI/UIxPreferences.m: Support for MailSignature setting.
	Mantis 113.
	* SoObjects/SOGo/SOGoUser.m (migrateSignature): Added. Mantis 113.
	* SoObjects/SOGo/LDAPUserManager.m: Changed addObjectUniquely to addObject.
	Mantis 113.

2009-08-19  Cyril Robert <crobert@inverse.ca>

	* UI/MainUI/SOGoUserHomePage.m (defaultAction): Added support for SOGoUIxDefaultModule
	* UI/PreferencesUI/UIxPreferences.m: Added: availableModules,
	itemModuleText, userDefaultModule, setUserDefaultModule to support 