@@ -177,3 +177,4 @@
 "Members" = "Members";
 "Contacts" = "Contacts";
 "Add" = "Add";
+"Lists can't be moved or copied." = "Lists can't be moved or copied.";
