@@ -177,3 +177,4 @@
 "Members" = "Membres";
 "Contacts" = "Contacts";
 "Add" = "Ajouter";
+"Lists can't be moved or copied." = "Les listes ne peuvent pas être déplacées ou copiées.";
